# store-list

./: README.md
apps/backend/: Cargo.toml
apps/backend/src/: main.rs
apps/backend/src/controllers/: lists.rs  mod.rs  products.rs
apps/backend/src/schemas/: lists.rs  mod.rs  products.rs  users.rs
apps/backend/src/services/: lists.rs
apps/frontend/public/: checkbox.json
