[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-async-std", "tls-native-tls", "postgres" ] }
chrono = "0.4.38"
validator = { version = "0.18.1", features = ["derive"]}

